--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --border-color: #e3e5e4;
-    --background-color: #c3c7ca;
+    --background-color: #c6d8f3;
 
 }
 
@@ -49,8 +49,20 @@ body {
     width: 60px;
 }
 
+.draggable-list li.over .draggable{
+    background-color: #eaeaea;
+}
+
 .draggable-list .building-name {
     margin: 0 20px 0 0;
+}
+
+.draggable-list li.right .building-name {
+   color: #3ae374;
+}
+
+.draggable-list li.wrong .building-name {
+   color: #ff3838;
 }
 
 .draggable {
@@ -60,4 +72,21 @@ body {
     justify-content: space-between;
     padding: 15px;
     flex: 1;
+}
+
+.check-btn {
+    background-color: var(--background-color);
+    border: none;
+    color: #34444f;
+    font-size: 16px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.check-btn:active {
+    transform: scale(0.98);
+}
+
+.check-btn:focus {
+    outline: none;
 }
